--- a/practice/image1.html
+++ b/practice/image1.html
@@ -18,8 +18,8 @@
     <audio controls unmuted>
         <source src="../Audios/Lil Mama See Road Runner 128 Kbps.mp3"type="audio/mp3">
     </audio>
-    <video controls muted>
-        <source src="../videos/w3 schools.mp4"type="video/mp4">
+    <video controls unmuted>
+        <source src="../videos/w3 schools.mp4" type="video/mp4">
     </video>
    <iframe width="914" height="514" src="https://www.youtube.com/embed/oX5Y26O5dBE" title="15 SQL Interview Questions TO GET YOU HIRED in 2025 | SQL Interview Questions &amp; Answers |Intellipaat" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
