--- a/box model.html
+++ b/box model.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selectors</title>
-    <link href="CSS/selectors-css.css"rel="stylesheet">
+    <link href="CSS/box model.css"rel="stylesheet">
 </head>
 <body> 
 <div id="one">front end</div>
