--- a/box model.html
+++ b/box model.html
@@ -13,7 +13,7 @@
 <div class="five">javascript</div>
 <div class="image"><img src="./images/HCL.png"></div>
 <div id="two"><img src="./images/Genpact.jpg"></div>
-<div id="six"><img src="images/Hexaware.png"></div>
+<div id="six"><img src="images/Deloitte.png"></div>
 <div id="seven"><img src="images/apple.jpg"></div>
 
 </body>
