--- a/css types.html
+++ b/css types.html
@@ -6,8 +6,8 @@
     <title>CSS Types</title>
 </head>
 <body>
-    <dl style="color: deeppink;font-size: large;">CSS types</dl>
-    <dd style="font-size: large;">CSS Divided into 3 types they are given below</dd><br>
+    <dl>CSS types</dl>
+    <dd>CSS Divided into 3 types they are given below</dd><br>
     <dd>Inline CSS</dd><br>
     <dd>Internal CSS</dd><br>
     <dd>External CSS</dd><br>
