--- a/external.html
+++ b/external.html
@@ -7,7 +7,7 @@
     <link href="CSS/external.css"rel="stylesheet">
 </head>
 <body>
-    <dl>fornt end technologies</dl>
+    <dl>FRONT END TECHNOLOGIES</dl>
     <ul>
         <li>HTML</li>
         <li>CSS</li>
