--- a/inline.html
+++ b/inline.html
@@ -6,7 +6,7 @@
     <title>Inline CSS</title>
 </head>
 <body>
-    <dl style="color:red;font-size: large;">fornt end technologies</dl>
+    <dl<span style="color:rgb(187, 184, 25);font-size: large;background-color: brown;">fornt end technologies</dl>
     <ul>
         <li>HTML</li>
         <li>CSS</li>
