--- a/internal.html
+++ b/internal.html
@@ -8,8 +8,11 @@
         ul{
             color: blue;
             font-size: large;
+            background-color: darkgray;
+            font-size: larger;
         }
        dl{
+            background-color: darksalmon;
             color: brown;
             font-size: large;
         }
