--- a/dom.html
+++ b/dom.html
@@ -4,13 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dom</title>
-    <script src="./javascript/dom.js"></script>
+    <script defer src="./javascript/dom.js"></script>
 </head>
 <body>
-    <div id="header">Header direction</div>
-    <div class="menu">menu</div>
-    <div class="menu">menu</div>
+<!-- <div id="header">header section</div> -->
+<!-- <div id="footer">footer section</div> -->
+ <!-- <div id="first">front end</div> -->
+  <!-- <div class="second">python course</div>
+   <div class="second">frontend</div>  -->
 
-    
+   <!-- <div class="thrid">course</div>
+   <div class="thrid">course</div> -->
+
+   <!-- if we are using two claaes then we get output we need output when using one class -->
+
+   <!-- <div id="four">main</div> -->
+
+   
+    <!-- by using id
+
+    <div id="six">box model</div> -->
+
+    <!-- using class -->
+
+    <!-- <div class="basu">fresher graduate</div> -->
+
+    <!-- <div class="box">div 1</div>
+    <div class="box">div 2</div> -->
+
+    <div class="card" id="card1">card</div>
+
 </body>
 </html>
