--- a/dom.html
+++ b/dom.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dom</title>
-    <script defer src="./javascript/dom.js"></script>
+    <script src="./javascript/dom.js"></script>
 </head>
 <body>
 <!-- <div id="header">header section</div> -->
@@ -32,7 +32,32 @@
     <!-- <div class="box">div 1</div>
     <div class="box">div 2</div> -->
 
-    <div class="card" id="card1">card</div>
+    <!-- <div class="card" id="card1">card</div> -->
+
+    <!-- <ul id="list">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+    </ul> -->
+
+    <!-- <ol id="basu">
+        <li>master</li>
+        <li>super</li>
+        <li>good</li>
+    </ol> -->
+
+    <!-- <ul id="pawan">
+        <li>basu</li>
+        <li>ram</li>
+        <li>charan</li>
+    </ul> -->
+
+    <!-- <button data-id="1">click me</button> -->
+
+    <!-- <div id="message">Hello</div> -->
+
+
+
 
 </body>
 </html>
