--- a/HTML/text.html
+++ b/HTML/text.html
@@ -4,7 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first</title>
+    <link href="CSS/styles.css"rel="stylesheet">
 </head>
+<header>
+<a href="https://www.achieversit.com/assets/images/logo-white.png">
+        <img src="https://www.achieversit.com/assets/images/logo-white.png">
+</a>
+    <nav>
+        <a href="#">All courses</a>
+        <a href="#">placements</a>
+        <a href="#">internships</a>
+        <a href="#">Existing students</a>
+        <a href="#">About us</a>
+        <a href="#">Review</a>
+        <a href="#">Blog</a>
+    </nav>
+    
+</header>
 <body style="background-color: beige;">
     <!---------heading tags------->
     <h1 style="color: cornflowerblue;"> first day of front end learning</h1>
@@ -24,5 +40,44 @@
             python provide libraries like<mark>numpy,pandas,matlab</mark><br>
             python provide framework like<mark>Django</mark></p>
     </div>
+    <footer>
+        <section>
+            <img src="https://www.achieversit.com/assets/images/AIT-white.jpg">
+            <p>AchieversIT - Provides a wide group of opportunities for freshers and Experienced candidate who can develop their skills and build their career opportunities across multiple Companies.</p>
+        </section>
+        <section>
+            <h4>COMPANY</h4>
+            <ul>
+                <li>Home</li>
+                <li>Placements</li>
+                <li>Corporate Training</li>
+                <li>Contact us</li>
+            </ul>
+        </section>
+        <section>
+            <h4>TRENDING COURSES</h4>
+            <ul>
+                <li>Ui development courses</li>
+                <li>Angular Js Course</li>
+                <li>Reactjs Course</li>
+                <li>Digital Marketing</li>
+                <li>Python Course</li>
+            </ul>
+
+        </section>
+        <section>
+            <h4>CONTACT INFO</h4>
+            <ul>
+                <li>#63, 1st Floor, 16th Main, 8th Cross,BTM 1st Stage, Bangalore, India - 560029</li>
+                <li>India : +91 8431-040-457</li>
+                <li>info@achieversit.com</li>
+            </ul>
+        </section>
+        <hr>
+        <h3>Copyright © 2024 AchieversIT. All Rights Reserved</h3>
+        <h3>Privacy Policy</h3>
+    </footer>
+
+    
 </body>
 </html>
