--- a/javascript/adom.html
+++ b/javascript/adom.html
@@ -15,6 +15,7 @@
         <div>Div
             <button>Click Me</button>
         </div>
+        <!-- <div>ask</div> -->
     </scction>
 </body>
 </html>
