--- a/HTML/animations.html
+++ b/HTML/animations.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animations</title>
-    <link href="./CSS/animations.css"rel="stylesheet">
+    <link href="../CSS/animations.css"rel="stylesheet">
 </head>
 <body>
     <h1>HTML</h1>
