--- a/HTML/box model.html
+++ b/HTML/box model.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selectors</title>
-    <link href="CSS/box model.css"rel="stylesheet">
+    <link href="../CSS/box model.css"rel="stylesheet">
 </head>
 <body> 
 <div id="one">front end</div>
 <div class="first">HTML</div>
 <div class="thrid">CSS</div>
 <div class="five">javascript</div>
-<div class="image"><img src="./images/HCL.png"></div>
-<div id="two"><img src="./images/Genpact.jpg"></div>
-<div id="six"><img src="images/Deloitte.png"></div>
-<div id="seven"><img src="images/apple.jpg"></div>
 
 </body>
 </html>
