--- a/HTML/zoom.html
+++ b/HTML/zoom.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>transitions</title>
-    <link href="./CSS/zoom.css"rel="stylesheet">
+    <link href="../CSS/zoom.css"rel="stylesheet">
 </head>
 <body>
     <header>
