--- a/javascript/dom events.html
+++ b/javascript/dom events.html
@@ -16,6 +16,8 @@
     </style>
 </head>
 <body>
+
+    <!--   -->
    <!-- <button id="btn1">Click Me</button> -->
 
     <div id="hover-div"></div>
@@ -23,6 +25,21 @@
     <input type = "text" id="inputfield" placeholder = "type">
   -->
 
+
+
+  <!-- <script>
+    var obj = {
+        name : 'bhaskar',
+        age : 31,
+        getDetails: function(){
+            console.log("hello");
+        }
+
+    }
+
+    console.log(obj);
+    console.log(window.document);
+  </script> -->
     
 </body>
 </html>
